--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "mssql": "^11.0.1"
   },
   "devDependencies": {
+    "jest": "^30.0.5",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
   }
